update logo web

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link
+            rel="icon"
+            type="image/webp"
+            href="https://res.cloudinary.com/dlbpgaw8k/image/upload/v1701093306/c86370_86d29cfeaed8486ca1621d60382cac78_mv2_lndxp2.webp"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>CareerEZ</title>
     </head>
